--- a/ui/qvplayer.ui
+++ b/ui/qvplayer.ui
@@ -151,7 +151,7 @@
       </widget>
      </item>
      <item>
-      <widget class="Phonon::SeekSlider" name="seekSlider" native="true">
+      <widget class="Phonon::SeekSlider" name="seekSlider">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
          <horstretch>1</horstretch>
@@ -163,10 +163,10 @@
          <pointsize>5</pointsize>
         </font>
        </property>
-       <property name="iconVisible" stdset="0">
+       <property name="iconVisible">
         <bool>false</bool>
        </property>
-       <property name="iconSize" stdset="0">
+       <property name="iconSize">
         <size>
          <width>16</width>
          <height>16</height>
@@ -185,6 +185,19 @@
       </widget>
      </item>
      <item>
+      <widget class="Phonon::VolumeSlider" name="volumeSlider">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="muteVisible">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QToolButton" name="reloadButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
@@ -197,19 +210,6 @@
        </property>
        <property name="autoRaise">
         <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="Phonon::VolumeSlider" name="volumeSlider" native="true">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="muteVisible" stdset="0">
-        <bool>false</bool>
        </property>
       </widget>
      </item>
