--- a/qrc/main.qrc
+++ b/qrc/main.qrc
@@ -3,5 +3,6 @@
         <file>img/home.png</file>
         <file>img/music.png</file>
         <file>img/shuffle.png</file>
+        <file>img/repeat.png</file>
     </qresource>
 </RCC>
