--- a/ui/qvplayer.ui
+++ b/ui/qvplayer.ui
@@ -83,6 +83,12 @@
       <property name="alternatingRowColors">
        <bool>false</bool>
       </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
       <property name="selectionRectVisible" stdset="0">
        <bool>true</bool>
       </property>
